--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   </head>
   <body>
-    <h2><a href="{{ url_for('landing_page') }}">Homepage</a></h2>
-    <h2><a href="{{ url_for('people') }}">Manage People</a></h2>
+    <h2><a href="/">Homepage</a></h2>
+    <h2><a href="/people">People</a></h2>
 		 
     <h2>Daily chores</h2>
     <table>
