--- a/static/style.css
+++ b/static/style.css
@@ -11,8 +11,11 @@ th.frac, td.frac {
     text-align: center;
 }
 input[type='number']{
-    width: 50px;
+    width: 45px;
 }
 .fixed-width {
     font-family: Courier;
+}
+hr {
+    width: 80%;
 }
