--- a/templates/prefs.html
+++ b/templates/prefs.html
@@ -5,10 +5,11 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-  <h2><a href="{{ url_for('people') }}">Back to managing people</a></h2>
+  <h2><a href="/">Homepage</a></h2>
+  <h2><a href="/people">People</a></h2>
   <h1>Manage Chore Preferences for {{person.first_name}}
     {{person.last_name}}</h1>
-  <h3>Preferences: <br> 0: never want to do this chore <br> 5: love to do this chore</h3>
+  <h3>Preference values range from: <br> 0: never want to do this chore <br>to<br> 5: love to do this chore</h3>
   <table>
     <tr>
       <th>Chore</th>
@@ -18,7 +19,7 @@
       {% for pref in prefs.itertuples() %}
       <tr>
 	<td>{{pref.task}}</td>
-	<td><input type="number" size="2"
+	<td><input type="number"
 		   value="{{ pref.preference }}"
 		   name="{{ pref.id }}" step="1" min="0" max="5"></input></td>
       </tr>
