--- a/templates/requests.html
+++ b/templates/requests.html
@@ -6,94 +6,153 @@
 </head>
 <body>
   <h2><a href="{{ url_for('people') }}">Back to managing people</a></h2>
-  <h2>Manage Weekly Chore Requests</h2>
+  <h2>Manage Weekly Chore Requests (don't forget to hit the Submit button!)</h2>
   <h2>For {{person.first_name}} {{person.last_name}}</h2>
   <h2>For week starting on Monday, {{date}}</h2>
 </h2>
   <table>
     <form method="POST" action="{{ url_for('requests', person_id = person.id) }}">
-    <tr>
-      <td>What days will you be in town?</td>
-      <td><p class="fixed-width">
-	<label for="mon_in_town">Mon</label>
-	<input type="checkbox" id="mon_in_town" name="intown_0" {{"checked" if requests.days_in_town[0]=="1" else ""}} >
-	<label for="tue_in_town">Tue</label>
-	<input type="checkbox" id="tue_in_town" name="intown_1" {{"checked" if requests.days_in_town[1]=="1" else ""}} />
-	<label for="wed_in_town">Wed</label>
-	<input type="checkbox" id="wed_in_town" name="intown_2" {{"checked" if requests.days_in_town[2]=="1" else ""}} />
-	<label for="thu_in_town">Thu</label>
-	<input type="checkbox" id="thu_in_town" name="intown_3" {{"checked" if requests.days_in_town[3]=="1" else ""}} />
-	<label for="fri_in_town">Fri</label>
-	<input type="checkbox" id="fri_in_town" name="intown_4" {{"checked" if requests.days_in_town[4]=="1" else ""}} />
-	<label for="sat_in_town">Sat</label>
-	<input type="checkbox" id="sat_in_town" name="intown_5" {{"checked" if requests.days_in_town[5]=="1" else ""}} />
-	<label for="sun_in_town">Sun</label>
-	<input type="checkbox" id="sun_in_town" name="intown_6" {{"checked" if requests.days_in_town[6]=="1" else ""}} />
-      </p></td>
-    </tr>
-    <tr>
-      <td>When can you put away dishes?</td>
-      <td><p class="fixed-width">
-	<label for="mon_am">Mon AM</label><input type="checkbox" id="mon_am" name="am_0" {{"checked" if requests.dishes_am[0]=="1" else ""}} >
-	<label for="tue_am">Tue AM</label><input type="checkbox" id="tue_am" name="am_1" {{"checked" if requests.dishes_am[1]=="1" else ""}} >
-	<label for="wed_am">Wed AM</label><input type="checkbox" id="wed_am" name="am_2" {{"checked" if requests.dishes_am[2]=="1" else ""}} >
-	<label for="thu_am">Thu AM</label><input type="checkbox" id="thu_am" name="am_3" {{"checked" if requests.dishes_am[3]=="1" else ""}} >
-	<label for="fri_am">Fri AM</label><input type="checkbox" id="fri_am" name="am_4" {{"checked" if requests.dishes_am[4]=="1" else ""}} >
-	<label for="sat_am">Sat AM</label><input type="checkbox" id="sat_am" name="am_5" {{"checked" if requests.dishes_am[5]=="1" else ""}} >
-	<label for="sun_am">Sun AM</label><input type="checkbox" id="sun_am" name="am_6" {{"checked" if requests.dishes_am[6]=="1" else ""}} >
-	<br>
-	<label for="mon_pm">Mon PM</label><input type="checkbox" id="mon_pm" name="pm_0" {{"checked" if requests.dishes_pm[0]=="1" else ""}} >
-	<label for="tue_pm">Tue PM</label><input type="checkbox" id="tue_pm" name="pm_1" {{"checked" if requests.dishes_pm[1]=="1" else ""}} >
-	<label for="wed_pm">Wed PM</label><input type="checkbox" id="wed_pm" name="pm_2" {{"checked" if requests.dishes_pm[2]=="1" else ""}} >
-	<label for="thu_pm">Thu PM</label><input type="checkbox" id="thu_pm" name="pm_3" {{"checked" if requests.dishes_pm[3]=="1" else ""}} >
-	<label for="fri_pm">Fri PM</label><input type="checkbox" id="fri_pm" name="pm_4" {{"checked" if requests.dishes_pm[4]=="1" else ""}} >
-	<label for="sat_pm">Sat PM</label><input type="checkbox" id="sat_pm" name="pm_5" {{"checked" if requests.dishes_pm[5]=="1" else ""}} >
-	<label for="sun_pm">Sun PM</label><input type="checkbox" id="sun_pm" name="pm_6" {{"checked" if requests.dishes_pm[6]=="1" else ""}} >
-      </p></td>
-    </tr>
-    <tr>
-      <td>When can you cook a meal?</td>
-      <td><p class="fixed-width">
-	<label for="mon_meal">Mon</label>
-	<input type="checkbox" id="mon_meal" name="meal_0" {{"checked" if requests.cook_meal[0]=="1" else ""}} >
-	<label for="tue_meal">Tue</label>
-	<input type="checkbox" id="tue_meal" name="meal_1" {{"checked" if requests.cook_meal[1]=="1" else ""}} />
-	<label for="wed_meal">Wed</label>
-	<input type="checkbox" id="wed_meal" name="meal_2" {{"checked" if requests.cook_meal[2]=="1" else ""}} />
-	<label for="thu_meal">Thu</label>
-	<input type="checkbox" id="thu_meal" name="meal_3" {{"checked" if requests.cook_meal[3]=="1" else ""}} />
-	<label for="fri_meal">Fri</label>
-	<input type="checkbox" id="fri_meal" name="meal_4" {{"checked" if requests.cook_meal[4]=="1" else ""}} />
-	<label for="sat_meal">Sat</label>
-	<input type="checkbox" id="sat_meal" name="meal_5" {{"checked" if requests.cook_meal[5]=="1" else ""}} />
-	<label for="sun_meal">Sun</label>
-	<input type="checkbox" id="sun_meal" name="meal_6" {{"checked" if requests.cook_meal[6]=="1" else ""}} />
-      </p></td>
-    </tr>
-    <tr>
-      <td>When can you clean up after dinner?</td>
-      <td><p class="fixed-width">
-	<label for="mon_cleanup">Mon</label>
-	<input type="checkbox" id="mon_cleanup" name="cleanup_0" {{"checked" if requests.meal_cleanup[0]=="1" else ""}} >
-	<label for="tue_cleanup">Tue</label>
-	<input type="checkbox" id="tue_cleanup" name="cleanup_1" {{"checked" if requests.meal_cleanup[1]=="1" else ""}} />
-	<label for="wed_cleanup">Wed</label>
-	<input type="checkbox" id="wed_cleanup" name="cleanup_2" {{"checked" if requests.meal_cleanup[2]=="1" else ""}} />
-	<label for="thu_cleanup">Thu</label>
-	<input type="checkbox" id="thu_cleanup" name="cleanup_3" {{"checked" if requests.meal_cleanup[3]=="1" else ""}} />
-	<label for="fri_cleanup">Fri</label>
-	<input type="checkbox" id="fri_cleanup" name="cleanup_4" {{"checked" if requests.meal_cleanup[4]=="1" else ""}} />
-	<label for="sat_cleanup">Sat</label>
-	<input type="checkbox" id="sat_cleanup" name="cleanup_5" {{"checked" if requests.meal_cleanup[5]=="1" else ""}} />
-	<label for="sun_cleanup">Sun</label>
-	<input type="checkbox" id="sun_cleanup" name="cleanup_6" {{"checked" if requests.meal_cleanup[6]=="1" else ""}} />
-      </p></td>
-    </tr>
-    <tr>
-      <td colspan="2" class="center-text">
-	<input type="submit" value="Submit Weekly Requests"/>
-      </td>
-    </tr>
+      <tr>
+	<td>What days will you be in town?</td>
+	<td><p class="fixed-width">
+	    <label for="mon_in_town">Mon</label>
+	    <input type="checkbox" id="mon_in_town" name="intown_0" {{"checked" if requests.days_in_town[0]=="1" else ""}} >
+	    <label for="tue_in_town">Tue</label>
+	    <input type="checkbox" id="tue_in_town" name="intown_1" {{"checked" if requests.days_in_town[1]=="1" else ""}} />
+	    <label for="wed_in_town">Wed</label>
+	    <input type="checkbox" id="wed_in_town" name="intown_2" {{"checked" if requests.days_in_town[2]=="1" else ""}} />
+	    <label for="thu_in_town">Thu</label>
+	    <input type="checkbox" id="thu_in_town" name="intown_3" {{"checked" if requests.days_in_town[3]=="1" else ""}} />
+	    <label for="fri_in_town">Fri</label>
+	    <input type="checkbox" id="fri_in_town" name="intown_4" {{"checked" if requests.days_in_town[4]=="1" else ""}} />
+	    <label for="sat_in_town">Sat</label>
+	    <input type="checkbox" id="sat_in_town" name="intown_5" {{"checked" if requests.days_in_town[5]=="1" else ""}} />
+	    <label for="sun_in_town">Sun</label>
+	    <input type="checkbox" id="sun_in_town" name="intown_6" {{"checked" if requests.days_in_town[6]=="1" else ""}} />
+	</p></td>
+	<td>
+	  <button type="sumbit" name="reset_intown">Unselect All</button>
+	</td>
+      </tr>
+      <tr>
+	<td>When can you put away dishes?</td>
+	<td><p class="fixed-width">
+	    <label for="mon_am">Mon AM</label><input type="checkbox" id="mon_am" name="am_0" {{"checked" if requests.dishes_am[0]=="1" else ""}} >
+	    <label for="tue_am">Tue AM</label><input type="checkbox" id="tue_am" name="am_1" {{"checked" if requests.dishes_am[1]=="1" else ""}} >
+	    <label for="wed_am">Wed AM</label><input type="checkbox" id="wed_am" name="am_2" {{"checked" if requests.dishes_am[2]=="1" else ""}} >
+	    <label for="thu_am">Thu AM</label><input type="checkbox" id="thu_am" name="am_3" {{"checked" if requests.dishes_am[3]=="1" else ""}} >
+	    <label for="fri_am">Fri AM</label><input type="checkbox" id="fri_am" name="am_4" {{"checked" if requests.dishes_am[4]=="1" else ""}} >
+	    <label for="sat_am">Sat AM</label><input type="checkbox" id="sat_am" name="am_5" {{"checked" if requests.dishes_am[5]=="1" else ""}} >
+	    <label for="sun_am">Sun AM</label><input type="checkbox" id="sun_am" name="am_6" {{"checked" if requests.dishes_am[6]=="1" else ""}} >
+	    <br>
+	    <label for="mon_pm">Mon PM</label><input type="checkbox" id="mon_pm" name="pm_0" {{"checked" if requests.dishes_pm[0]=="1" else ""}} >
+	    <label for="tue_pm">Tue PM</label><input type="checkbox" id="tue_pm" name="pm_1" {{"checked" if requests.dishes_pm[1]=="1" else ""}} >
+	    <label for="wed_pm">Wed PM</label><input type="checkbox" id="wed_pm" name="pm_2" {{"checked" if requests.dishes_pm[2]=="1" else ""}} >
+	    <label for="thu_pm">Thu PM</label><input type="checkbox" id="thu_pm" name="pm_3" {{"checked" if requests.dishes_pm[3]=="1" else ""}} >
+	    <label for="fri_pm">Fri PM</label><input type="checkbox" id="fri_pm" name="pm_4" {{"checked" if requests.dishes_pm[4]=="1" else ""}} >
+	    <label for="sat_pm">Sat PM</label><input type="checkbox" id="sat_pm" name="pm_5" {{"checked" if requests.dishes_pm[5]=="1" else ""}} >
+	    <label for="sun_pm">Sun PM</label><input type="checkbox" id="sun_pm" name="pm_6" {{"checked" if requests.dishes_pm[6]=="1" else ""}} >
+	</p></td>
+	<td>
+	  <button type="sumbit" name="reset_am">Unselect AM</button><br>
+	  <button type="sumbit" name="reset_pm">Unselect PM</button>
+	</td>
+      </tr>
+      <tr>
+	<td>When can you cook a meal?</td>
+	<td><p class="fixed-width">
+	    <label for="mon_meal">Mon</label>
+	    <input type="checkbox" id="mon_meal" name="meal_0" {{"checked" if requests.cook_meal[0]=="1" else ""}} >
+	    <label for="tue_meal">Tue</label>
+	    <input type="checkbox" id="tue_meal" name="meal_1" {{"checked" if requests.cook_meal[1]=="1" else ""}} />
+	    <label for="wed_meal">Wed</label>
+	    <input type="checkbox" id="wed_meal" name="meal_2" {{"checked" if requests.cook_meal[2]=="1" else ""}} />
+	    <label for="thu_meal">Thu</label>
+	    <input type="checkbox" id="thu_meal" name="meal_3" {{"checked" if requests.cook_meal[3]=="1" else ""}} />
+	    <label for="fri_meal">Fri</label>
+	    <input type="checkbox" id="fri_meal" name="meal_4" {{"checked" if requests.cook_meal[4]=="1" else ""}} />
+	    <label for="sat_meal">Sat</label>
+	    <input type="checkbox" id="sat_meal" name="meal_5" {{"checked" if requests.cook_meal[5]=="1" else ""}} />
+	    <label for="sun_meal">Sun</label>
+	    <input type="checkbox" id="sun_meal" name="meal_6" {{"checked" if requests.cook_meal[6]=="1" else ""}} />
+	</p></td>
+	<td>
+	  <button type="sumbit" name="reset_cook">Unselect All</button>
+	</td>
+      </tr>
+      <tr>
+	<td>When can you be a sous chef?</td>
+	<td><p class="fixed-width">
+	    <label for="mon_meal">Mon</label>
+	    <input type="checkbox" id="mon_sous" name="sous_0" {{"checked" if requests.sous_chef[0]=="1" else ""}} >
+	    <label for="tue_sous">Tue</label>
+	    <input type="checkbox" id="tue_sous" name="sous_1" {{"checked" if requests.sous_chef[1]=="1" else ""}} />
+	    <label for="wed_sous">Wed</label>
+	    <input type="checkbox" id="wed_sous" name="sous_2" {{"checked" if requests.sous_chef[2]=="1" else ""}} />
+	    <label for="thu_sous">Thu</label>
+	    <input type="checkbox" id="thu_sous" name="sous_3" {{"checked" if requests.sous_chef[3]=="1" else ""}} />
+	    <label for="fri_sous">Fri</label>
+	    <input type="checkbox" id="fri_sous" name="sous_4" {{"checked" if requests.sous_chef[4]=="1" else ""}} />
+	    <label for="sat_sous">Sat</label>
+	    <input type="checkbox" id="sat_sous" name="sous_5" {{"checked" if requests.sous_chef[5]=="1" else ""}} />
+	    <label for="sun_sous">Sun</label>
+	    <input type="checkbox" id="sun_sous" name="sous_6" {{"checked" if requests.sous_chef[6]=="1" else ""}} />
+	</p></td>
+	<td>
+	  <button type="sumbit" name="reset_sous">Unselect All</button>
+	</td>
+      </tr>
+      <tr>
+	<td>When can you clean up after dinner?</td>
+	<td><p class="fixed-width">
+	    <label for="mon_cleanup">Mon</label>
+	    <input type="checkbox" id="mon_cleanup" name="cleanup_0" {{"checked" if requests.meal_cleanup[0]=="1" else ""}} >
+	    <label for="tue_cleanup">Tue</label>
+	    <input type="checkbox" id="tue_cleanup" name="cleanup_1" {{"checked" if requests.meal_cleanup[1]=="1" else ""}} />
+	    <label for="wed_cleanup">Wed</label>
+	    <input type="checkbox" id="wed_cleanup" name="cleanup_2" {{"checked" if requests.meal_cleanup[2]=="1" else ""}} />
+	    <label for="thu_cleanup">Thu</label>
+	    <input type="checkbox" id="thu_cleanup" name="cleanup_3" {{"checked" if requests.meal_cleanup[3]=="1" else ""}} />
+	    <label for="fri_cleanup">Fri</label>
+	    <input type="checkbox" id="fri_cleanup" name="cleanup_4" {{"checked" if requests.meal_cleanup[4]=="1" else ""}} />
+	    <label for="sat_cleanup">Sat</label>
+	    <input type="checkbox" id="sat_cleanup" name="cleanup_5" {{"checked" if requests.meal_cleanup[5]=="1" else ""}} />
+	    <label for="sun_cleanup">Sun</label>
+	    <input type="checkbox" id="sun_cleanup" name="cleanup_6" {{"checked" if requests.meal_cleanup[6]=="1" else ""}} />
+	</p></td>
+	<td>
+	  <button type="sumbit" name="reset_clean">Unselect All</button>
+	</td>
+      </tr>
+
+	<td>When can you be the night sweep?</td>
+	<td><p class="fixed-width">
+	    <label for="mon_sweep">Mon</label>
+	    <input type="checkbox" id="mon_sweep" name="sweep_0" {{"checked" if requests.night_sweep[0]=="1" else ""}} >
+	    <label for="tue_sweep">Tue</label>
+	    <input type="checkbox" id="tue_sweep" name="sweep_1" {{"checked" if requests.night_sweep[1]=="1" else ""}} />
+	    <label for="wed_sweep">Wed</label>
+	    <input type="checkbox" id="wed_sweep" name="sweep_2" {{"checked" if requests.night_sweep[2]=="1" else ""}} />
+	    <label for="thu_sweep">Thu</label>
+	    <input type="checkbox" id="thu_sweep" name="sweep_3" {{"checked" if requests.night_sweep[3]=="1" else ""}} />
+	    <label for="fri_sweep">Fri</label>
+	    <input type="checkbox" id="fri_sweep" name="sweep_4" {{"checked" if requests.night_sweep[4]=="1" else ""}} />
+	    <label for="sat_sweep">Sat</label>
+	    <input type="checkbox" id="sat_sweep" name="sweep_5" {{"checked" if requests.night_sweep[5]=="1" else ""}} />
+	    <label for="sun_sweep">Sun</label>
+	    <input type="checkbox" id="sun_sweep" name="sweep_6" {{"checked" if requests.night_sweep[6]=="1" else ""}} />
+	</p></td>
+	<td>
+	  <button type="sumbit" name="reset_sweep">Unselect All</button>
+	</td>
+      </tr>
+      
+      <tr>
+	<td colspan="3" class="center-text">
+	  <input type="submit" value="Submit Weekly Requests"/>
+	</td>
+      </tr>
+    </form>
   </table>
 </body>
 </html>
