--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -80,11 +80,11 @@
 	</tr>
 	<tr>
 	  <td><label for="duration">Duration (in hours)</label></td>
-	  <td><input type="number" step="0.05" min="0" value="0.25" id="duration" name="duration" size="4"></input></td>
+	  <td><input type="number" step="0.05" min="0" value="0.25" id="duration" name="duration"></input></td>
 	</tr>
 	<tr>
 	  <td><label for="freq">Frequency (in weeks)</label></td>
-	  <td><input type="number" step="1" min="2" value="2" id="freq" name="frequency" size="4"></input></td>
+	  <td><input type="number" step="1" min="2" value="2" id="freq" name="frequency"></input></td>
 	</tr>
 	<tr>
 	  <td colspan="4" class="center-text">
