switch to editing chore preferences for every person on the same page

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,8 @@
   <h2>Admin tasks</h2>
   <ul>
     <li><a href="/people">Manage people</a></li>
-    <li><a href="/tasks">Manage chores</a></li>
+    <li><a href="/tasks">Manage chore definitions</a></li>
+    <li><a href="/prefs">Manage chore preferences</a></li>
   </ul>
 
   <h2>Chore Chart</h2>
