re-engineer the way hours are computed and tracked

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
   <h2>Admin tasks</h2>
   <ul>
-    <li><a href="/people">Manage people</a></li>
+    <li><a href="/people">Manage people/chore requests</a></li>
     <li><a href="/tasks">Manage chore definitions</a></li>
     <li><a href="/prefs">Manage chore preferences</a></li>
   </ul>
