fix bugs, added features, started the gsheet construction dev

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 
   <h2>Chore Chart</h2>
   <ul>
-    <li><a href="/assignments">View current and past chore assignments</a></li>
+    <li><a href="/assignments">View chore assignments</a></li>
     <li><a href="/assign-chores">Construct the chore chart for next week</a></li>
   </ul>
 
