--- a/templates/requests.html
+++ b/templates/requests.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
+  <h2><a href="/">Homepage</a></h2>
   <h2><a href="{{ url_for('people') }}">Back to managing people</a></h2>
   <h2>Manage Weekly Chore Requests (don't forget to hit the Submit button!)</h2>
   <h2>For {{person.first_name}} {{person.last_name}}</h2>
