remove last name from chore request page and the chore list page

--- a/templates/requests.html
+++ b/templates/requests.html
@@ -8,7 +8,7 @@
   <h2><a href="/">Homepage</a></h2>
   <h2><a href="{{ url_for('people') }}">Back to managing people</a></h2>
   <h2>Manage Weekly Chore Requests (don't forget to hit the Submit button!)</h2>
-  <h2>For {{person.first_name}} {{person.last_name}}</h2>
+  <h2>For {{person.first_name}}</h2>
   <h2>For week starting on Monday, {{date}}</h2>
 </h2>
   <table>
