attempt at fixed header for the table of chore prefs

--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,16 @@
 table, th, td {
     border: 1px solid;
 }
+.fixed-header thead {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
+.scrollable {
+  display: block;
+  overflow-y: auto;
+  max-height: 500px;
+}
 th, td {
     padding: 5px;
 }
