when submitting chore requests, go back to people

--- a/templates/requests.html
+++ b/templates/requests.html
@@ -158,7 +158,7 @@
       
       <tr>
 	<td colspan="3" class="center-text">
-	  <input type="submit" value="Submit Weekly Requests"/>
+	  <input type="submit" name="form_submit" value="Submit Weekly Requests"/>
 	</td>
       </tr>
     </form>
